<resources>
    <string name="app_name">EMail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="activity_add_account_add_button">Add</string>
    <string name="activity_add_account_name">Enter Name</string>
    <string name="activity_add_account_server">Enter Server URL</string>
    <string name="activity_add_account_email">Enter E-Mail</string>
    <string name="activity_add_account_password">Enter Password</string>
    <string-array name="imap_array">
        <item>IMAP</item>
        <item>IMAPS</item>
        <item>IMAP/STARTTLS</item>
    </string-array>
    <string-array name="smtp_array">
        <item>SMTP</item>
        <item>SMTPS</item>
        <item>SMTP/STARTTLS</item>
    </string-array>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_folder">FolderActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="delete_message_button_description">Delete the current message</string>
    <string name="move_message_button_description">Move the current message</string>
    <string name="deleting_message_toast">Deleting message...</string>
</resources>
